# catdog

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  views.py
backend/templates/: index.html
static/css/: main.css
templates/: index.css  index.html
