[tool.poetry]
name = "catdog"
version = "0.1.0"
description = "A website to generate pictures of dogs or cats! (A STEAM Club's first open source project)"
authors = ["Nathan Solis", "Brandon Bowdoin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
requests = "^2.28.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pip-tools = "^6.13.0"
black = "^23.3.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
